# kid-stuff

proxy/: block.html
word_search/: Cargo.toml
word_search/src/: all_words.txt  backtracking.rs  main.rs
worksheets/: grid.html  hex.html
