[package]
name = "word_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.13.0"
printpdf = "*"
rand = "0.8.4"

[patch.crates-io]
grid = { git = 'https://github.com/jmole/rust-grid.git' }

